--- a/app/login/templates/dashboard_landing.jinja
+++ b/app/login/templates/dashboard_landing.jinja
@@ -1,6 +1,7 @@
 
 {% extends "dashboard_layout.html.jinja" %}
-{% block  'main_user_pane' %}
+
+{% block  main_user_pane %}
                 </div>'%}
 <div class="fullscreen dashboard">
 	<div class="container">
@@ -54,5 +55,3 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- partial -->
    {% endblock %}
-</body>
-</html>
