--- a/app/templates/dashboard_layout.html.jinja
+++ b/app/templates/dashboard_layout.html.jinja
@@ -117,7 +117,7 @@
             </button>
             <button target="#logoutModal" class="profile-btn">
                 <img src="https://assets.codepen.io/3306515/IMG_2025.jpg" />
-                <span>UserName</span>
+                <span>{{current_user.first_name}}</span>
             </button>
         </div>
         <button class="messages-btn">
@@ -208,6 +208,8 @@
                     <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"/>
                 </svg>
             </a>
+            </div>
+            </div id="main-user-pane">
             <div class="flask-message-container">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
@@ -216,7 +218,9 @@
                 {% endwith %}
             </div>
             {% block user_main_pane %}
-            {% endblock%}
+            <H1> I AM THE MAIN CONTENT AREA</H1> 
+            {% endblock user_main_pane %}
+            </div>
             <!-- logout modal -->
             <div class="modal"
                  id="logoutModal"
