--- a/app/static/css/login_style.css
+++ b/app/static/css/login_style.css
@@ -4,14 +4,18 @@
     font-family: SafariLifeWild;
     src: url("https://assets.codepen.io/6554302/RubikMoonrocks-Regular.ttf")
 }
+@font-face{
+    font-family: LoginFont;
+    src: url(https://fonts.googleapis.com/css?family=Sora:100,200,300,regular,500,600,700,800);
+}
 
 body {
     background-image: linear-gradient(90deg, #fcff9e 0%, #c67700 100%);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: "Open Sans", sans-serif;
-    color: #333333;
+    font-family: "LoginFont"  
+    Color: #333333;
 }
 
 footer{
@@ -24,7 +28,7 @@ h5, h1 {
 }
 
 #entire-login {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     flex-direction: column;
 
@@ -153,7 +157,6 @@ h5, h1 {
 }
 
 .box-form .right .remember-me--forget-password {
-    display: flex;
     justify-content: space-between;
     align-items: center;
 }
